Morpheus simulation enabled

--- a/config/image_files/image_file_dictionary.yml
+++ b/config/image_files/image_file_dictionary.yml
@@ -96,6 +96,7 @@ message: 'famfamfam_silk/email.png'
 message_delete: 'famfamfam_silk/email_delete.png'
 message_read: 'famfamfam_silk/email_open.png'
 messages_outbox: 'famfamfam_silk/email_go.png'
+morpheus: 'misc_icons/morpheus.png'
 move: 'famfamfam_silk/folder_page_white.png'
 multi_add: 'famfamfam_silk/table_add.png'
 multi_step_progress_indicator_icon: 'multi-step-wizard/indicator.png'
