--- a/lib/seek/config_setting_attributes.yml
+++ b/lib/seek/config_setting_attributes.yml
@@ -57,6 +57,7 @@ jerm_enabled:
 email_enabled:
 jws_enabled:
 copasi_enabled:
+morpheus_enabled:
 external_search_enabled:
 piwik_analytics_enabled:
 piwik_analytics_tracking_notice:
